logging in python

--- a/Python_for_data_science/python.ipynb
+++ b/Python_for_data_science/python.ipynb
@@ -2375,16 +2375,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "c1ae9f1c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-05-19 22:10:58 - module1 - DEBUG - This is a debug message for module1\n",
+      "2025-05-19 22:10:58 - module2 - WARNING - This is a warning message for module2\n",
+      "2025-05-19 22:10:58 - module2 - ERROR - This is an error message for module2\n"
+     ]
+    }
+   ],
+   "source": [
+    "import logging\n",
+    "\n",
+    "# create a handler\n",
+    "console_handler = logging.StreamHandler()\n",
+    "console_handler.setFormatter(logging.Formatter(\n",
+    "    '%(asctime)s - %(name)s - %(levelname)s - %(message)s',\n",
+    "    datefmt='%Y-%m-%d %H:%M:%S'\n",
+    "))\n",
+    "\n",
+    "# create logger for module 1\n",
+    "logger1 = logging.getLogger(\"module1\")\n",
+    "logger1.setLevel(logging.DEBUG)\n",
+    "logger1.addHandler(console_handler)\n",
+    "\n",
+    "# create logger for module 2\n",
+    "logger2 = logging.getLogger(\"module2\")\n",
+    "logger2.setLevel(logging.WARNING)\n",
+    "logger2.addHandler(console_handler)\n",
+    "\n",
+    "# Log messages with different loggers\n",
+    "logger1.debug(\"This is a debug message for module1\")\n",
+    "logger2.warning(\"This is a warning message for module2\")\n",
+    "logger2.error(\"This is an error message for module2\")\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "359ae99f",
+   "id": "4ab3727c",
    "metadata": {},
    "outputs": [],
    "source": []
