--- a/Python_for_data_science/python.ipynb
+++ b/Python_for_data_science/python.ipynb
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "b85678d7",
    "metadata": {},
    "outputs": [
@@ -440,7 +440,7 @@
    "source": [
     "# writing then reading the fiel\n",
     "with open('example2.txt', 'w+') as file:\n",
-    "    file.write('I love Singapore\\n')\n",
+    "    file.write('I love UK\\n')\n",
     "    file.write('Also Illinois\\n')\n",
     "\n",
     "    # move the file cursor to the beginning\n",
